<resources>
    <string name="app_name">kickoffapp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Usuário</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in_facebook">Entrar com facebook</string>
    <string name="sign_out_facebook">SAIR DO APLICATIVO</string>
    <string name="title_activity_new_account">NewAccountActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="register">Cadastrar</string>
    <string name="facebook_app_id">545567282282477</string>
    <string name="title_activity_player_main">PlayerMainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_logout">Sair</string>
    <string name="title_activity_enterprise_main">EnterpriseMainActivity</string>
    <string name="register_facebook">Cadastrar com facebook</string>
    <string name="title_activity_confirm_account">ConfirmAccountActivity</string>
    <string name="confirm_account">Confirmar conta</string>
    <string name="title_activity_create_court">CreateCourtActivity</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nova_quadra">Nova quadra</string>
    <string name="title_activity_edit_court">EditCourtActivity</string>
    <string name="title_activity_create_schedule">CreateScheduleActivity</string>
    <string name="title_activity_edit_schedule">EditScheduleActivity</string>
    <string name="excluir">Excluir</string>
    <string name="title_activity_create_game">CreateGameActivity</string>
    <string name="novo_jogo">Novo jogo</string>

</resources>
